Added image url to the book model