@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,7 +25,7 @@ public class ReviewServiceImpl implements ReviewService {
 
     @Override
     public List<ReviewDto> findAll() {
-        return reviewRepository.findAll().stream().map(ReviewDto::from).collect(Collectors.toList());
+        return reviewRepository.findAll().stream().map(ReviewDto::from).toList();
     }
 
     @Override
